snapshot-tests/tests/snapshots/annotate_snippets__missing_required.snap
---
source: snapshot-tests/tests/annotate_snippets.rs
assertion_line: 35
expression: rendered
---
error: missing field 's' in table
 --> missing_required:1:1
  |
1 | os = 20
  | ^^^^^^^ table with missing field
